downgrade methods to support java 8